--- a/conf/modules.config
+++ b/conf/modules.config
@@ -100,6 +100,17 @@ process {
         ]   
     } 
 
+    withName: BCFTOOLS_MPILEUP {
+        ext.args = '--count-orphans --no-BAQ'
+        ext.args2 = '-A -m'
+        ext.prefix = { "${meta.id}.ivar_trim.sorted" }
+        publishDir = [
+            path: { "${params.outdir}/bcftools/mpileup" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{vcf,txt}"
+        ]        
+    }
+
     withName: IVAR_VARIANTS {
         ext.args = '-t 0.25 -q 20 -m 10'
         ext.args2 = '--ignore-overlaps --count-orphans --no-BAQ --max-depth 0 --min-BQ 0'
