change bcftools mpileup max depth

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -101,7 +101,7 @@ process {
     } 
 
     withName: BCFTOOLS_MPILEUP {
-        ext.args = '--count-orphans --no-BAQ'
+        ext.args = '--count-orphans --no-BAQ --max-depth 50000 --max-idepth 500000 --annotate FORMAT/AD,FORMAT/ADF,FORMAT/ADR,FORMAT/DP,FORMAT/SP,INFO/AD,INFO/ADF,INFO/ADR'
         ext.args2 = '-A -m'
         ext.prefix = { "${meta.id}.ivar_trim.sorted" }
         publishDir = [
