--- a/nextflow.config
+++ b/nextflow.config
@@ -9,71 +9,74 @@
 // Global default params, used in configs
 params {
     // Input options
-    input                      = null
+    input = null
 
     // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes'
-    igenomes_ignore            = false
-    fasta                      = "${projectDir}/ref/RSV_A_B_ampseq_refs.fasta"
-    primer_bed_RSVA            = "${projectDir}/ref/RSVA_V1/RSVA.primer.bed"
-    ref_gff_RSVA               = "${projectDir}/ref/RSVA_V1/RSVA_amplicon_ref.gff"
-    bowtie2_index_RSVA         = "${projectDir}/ref/RSVA_V1/bowtie2/"
-    primer_bed_RSVB            = "${projectDir}/ref/RSVB_V1/RSVB.primer.bed"
-    ref_gff_RSVB               = "${projectDir}/ref/RSVB_V1/RSVB_amplicon_ref.gff"
-    bowtie2_index_RSVB         = "${projectDir}/ref/RSVB_V1/bowtie2/"
+    genome = null
+    igenomes_base = 's3://ngi-igenomes/igenomes'
+    igenomes_ignore = false
+    fasta = "${projectDir}/ref/RSV_A_B_ampseq_refs.fasta"
+	ref_RSVA = "${projectDir}/ref/RSVA_V1/RSVA.fasta"
+    primer_bed_RSVA = "${projectDir}/ref/RSVA_V1/RSVA.primer.bed"
+    ref_gff_RSVA = "${projectDir}/ref/RSVA_V1/RSVA_amplicon_ref.gff"
+    bowtie2_index_RSVA = "${projectDir}/ref/RSVA_V1/bt2_RSVA/"
+	ref_RSVB = "${projectDir}/ref/RSVB_V1/RSVB.fasta"
+    primer_bed_RSVB = "${projectDir}/ref/RSVB_V1/RSVB.primer.bed"
+    ref_gff_RSVB = "${projectDir}/ref/RSVB_V1/RSVB_amplicon_ref.gff"
+    bowtie2_index_RSVB = "${projectDir}/ref/RSVB_V1/bt2_RSVB/"
 
     // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
+    multiqc_config = null
+    multiqc_title = null
+    multiqc_logo = null
+    max_multiqc_email_size = '25.MB'
     multiqc_methods_description = null
-    skip_multiqc               = false
+    skip_multiqc = false
 
     // Boilerplate options
-    outdir                     = null
-    tracedir                   = "${params.outdir}/pipeline_info"
-    publish_dir_mode           = 'copy'
-    email                      = null
-    email_on_fail              = null
-    plaintext_email            = false
-    monochrome_logs            = false
-    hook_url                   = null
-    help                       = false
-    validate_params            = true
-    show_hidden_params         = false
-    schema_ignore_params       = 'genomes'
-    enable_conda               = false
+    output = null
+	run_name = 'run'
+    tracedir = "${params.output}/pipeline_info"
+    publish_dir_mode = 'copy'
+    email = null
+    email_on_fail = null
+    plaintext_email = false
+    monochrome_logs = false
+    hook_url = null
+    help = false
+    validate_params = true
+    show_hidden_params = false
+    schema_ignore_params = 'genomes'
+    enable_conda = false
 
     // FastQC/fastp options
-    adapter_fasta	           = "${projectDir}/assets/adapter.fasta"
-    save_trimmed_fail	       = false
-    save_merged		           = false
-    trim_len		           = 50
-    skip_fastp		           = false
-    skip_fastqc		           = false
+    adapter_fasta = "${projectDir}/assets/adapter.fasta"
+    save_trimmed_fail = false
+    save_merged = false
+    trim_len = 50
+    skip_fastp = false
+    skip_fastqc = false
 
     // Alignment
-    save_bowtie2_unaligned     = false
-    ivar_trim_noprimer         = false
-    ivar_trim_offset           = null
-    save_mpileup               = false
+    save_bowtie2_unaligned = false
+    ivar_trim_noprimer = false
+    ivar_trim_offset = null
+    save_mpileup = false
 
     // Config options
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    custom_config_version = 'master'
+    custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
     config_profile_description = null
-    config_profile_contact     = null
-    config_profile_url         = null
-    config_profile_name        = null
+    config_profile_contact = null
+    config_profile_url = null
+    config_profile_name = null
 
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
-    max_cpus                   = 16
-    max_time                   = '240.h'
+    max_memory = '128.GB'
+    max_cpus = 16
+    max_time = '240.h'
 
 }
 
