--- a/conf/modules.config
+++ b/conf/modules.config
@@ -14,24 +14,16 @@ process {
 
     withName: SAMPLESHEET_CHECK {
         publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
+            path: { "${params.output}/pipeline_info" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
-    withName: CUSTOM_DUMPSOFTWAREVERSIONS {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
-            mode: params.publish_dir_mode,
-            pattern: '*_versions.yml'
-        ]
-    }
-
-    withName: BBMAP_ALIGN {
+    withName: '.*:SELECT_REFERENCE:BBMAP_ALIGN' {
 		ext.args = "local=true maxindel=80"
         publishDir = [
-            path: { "${params.outdir}/init_align" },
+            path: { "${params.output}/select_reference" },
             mode: params.publish_dir_mode,
             pattern: "*.{tsv,log}"
         ]
@@ -45,7 +37,7 @@ process {
     withName: '.*:FASTQ_ALIGN_BOWTIE2:BAM_SORT_STATS_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bowtie2" },
+            path: { "${params.output}/bowtie2" },
             mode: params.publish_dir_mode,
             pattern: "*.sorted.bam"
         ]
@@ -54,7 +46,7 @@ process {
     withName: '.*:FASTQ_ALIGN_BOWTIE2:BAM_SORT_STATS_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
         ext.prefix = { "${meta.id}.sorted.bam" }
         publishDir = [
-            path: { "${params.outdir}/bowtie2/samtools_stats" },
+            path: { "${params.output}/bowtie2/samtools_stats" },
             mode: params.publish_dir_mode,
             pattern: "*.{stats,flagstat,idxstats}"
         ]
@@ -68,7 +60,7 @@ process {
             ].join(' ').trim()
         ext.prefix = { "${meta.id}.ivar_trim" }
         publishDir = [
-            path: { "${params.outdir}/ivar/trim/log" },
+            path: { "${params.output}/ivar/trim/log" },
             mode: params.publish_dir_mode,
             pattern: '*.log'
         ]
@@ -77,7 +69,7 @@ process {
     withName: '.*:IVAR_PRIMER_TRIM:BAM_SORT_STATS_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.ivar_trim.sorted" }
         publishDir = [
-            path: { "${params.outdir}/ivar/trim" },
+            path: { "${params.output}/ivar/trim" },
             mode: params.publish_dir_mode,
             pattern: "*.bam"
         ] 
@@ -85,7 +77,7 @@ process {
 
 	withName: '.*:IVAR_PRIMER_TRIM:BAM_SORT_STATS_SAMTOOLS:SAMTOOLS_INDEX' {
 		publishDir = [
-			path: { "${params.outdir}/ivar/trim" },
+			path: { "${params.output}/ivar/trim" },
 			mode: params.publish_dir_mode,
 			pattern: "*.bai"
 		]
@@ -94,7 +86,7 @@ process {
 	withName: '.*:IVAR_PRIMER_TRIM:BAM_SORT_STATS_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
         ext.prefix = { "${meta.id}.ivar_trim.sorted.bam" }
         publishDir = [ 
-            path: { "${params.outdir}/ivar/trim/samtools_stats" },
+            path: { "${params.output}/ivar/trim/samtools_stats" },
             mode: params.publish_dir_mode,
             pattern: "*.{stats,flagstat,idxstats}"
         ]   
@@ -105,7 +97,7 @@ process {
         ext.args2 = '-A -m'
         ext.prefix = { "${meta.id}.ivar_trim.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bcftools/mpileup" },
+            path: { "${params.output}/bcftools/mpileup" },
             mode: params.publish_dir_mode,
             pattern: "*.{vcf,txt}"
         ]        
@@ -115,24 +107,24 @@ process {
         ext.args = '-t 0.01 -q 20 -m 10'
         ext.args2 = '--ignore-overlaps --count-orphans --no-BAQ --max-depth 0 --min-BQ 0'
         publishDir = [
-            path: { "${params.outdir}/ivar/variants" },
+            path: { "${params.output}/ivar/variants" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
     withName: IVAR_CONSENSUS {
-        ext.args = '-t 0.6 -q 20 -m 5 -n N'
+        ext.args = '-t 0.6 -q 20 -m 10 -n N'
         ext.args2 = '--count-orphans --no-BAQ --max-depth 0 --min-BQ 0 -aa'
         ext.prefix = { "${meta.id}.consensus" }
         publishDir = [
             [
-                path: { "${params.outdir}/ivar/consensus" },
+                path: { "${params.output}/ivar/consensus" },
                 mode: params.publish_dir_mode,
                 pattern: "*.{fa,txt}",
             ],
             [
-                path: { "${params.outdir}/ivar/mpileup" },
+                path: { "${params.output}/ivar/mpileup" },
                 mode: params.publish_dir_mode,
                 pattern: "*.mpileup",
                 enabled: params.save_mpileup
@@ -142,7 +134,7 @@ process {
 
     withName: EDIT_IVAR_VARIANTS {
         publishDir = [
-            path: { "${params.outdir}/ivar/variants" },
+            path: { "${params.output}/ivar/variants" },
             mode: params.publish_dir_mode,
             pattern: "*.reformatted.tsv"
         ]
@@ -150,17 +142,9 @@ process {
 
 	withName: SUMMARY {
 		publishDir =[
-			path: { "${params.outdir}/summary" },
+			path: { "${params.output}/summary" },
 			mode: params.publish_dir_mode,
 			pattern: "*.summary.tsv"
-		]
-	}
-
-	withName: CLEANUP {
-		publishDir = [
-			path: { "${params.outdir}" },
-			mode: params.publish_dir_mode,
-			pattern: "*summary.tsv"
 		]
 	}
 }
@@ -170,7 +154,7 @@ if (!params.skip_fastqc) {
         withName: '.*:FASTQ_TRIM_FASTP_FASTQC:FASTQC_RAW' {
             ext.args = '--quiet'
             publishDir = [
-                path: { "${params.outdir}/fastqc/raw" },
+                path: { "${params.output}/fastqc/raw" },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -184,17 +168,17 @@ if (!params.skip_fastp) {
             ext.args = "--cut_front --cut_tail --trim_poly_x --cut_mean_quality 20 --qualified_quality_phred 20 --unqualified_percent_limit 20 --length_required ${params.trim_len}"
             publishDir = [
                 [
-                    path: { "${params.outdir}/fastp" },
+                    path: { "${params.output}/fastp" },
                     mode: params.publish_dir_mode,
                     pattern: "*.{json,html}"
                 ],
                 [
-                    path: { "${params.outdir}/fastp/log" },
+                    path: { "${params.output}/fastp/log" },
                     mode: params.publish_dir_mode,
                     pattern: "*.log"
                 ],
                 [
-                    path: { "${params.outdir}/fastp" },
+                    path: { "${params.output}/fastp" },
                     mode: params.publish_dir_mode,
                     pattern: "*.fail.fastq.gz",
                     enabled: params.save_trimmed_fail
@@ -208,7 +192,7 @@ if (!params.skip_fastp) {
 			withName: '.*:FASTQ_TRIM_FASTP_FASTQC:FASTQC_TRIM' {
 				ext.args = '--quiet'
 				publishDir = [
-					path: { "${params.outdir}/fastqc/trim" },
+					path: { "${params.output}/fastqc/trim" },
 					mode: params.publish_dir_mode,
 					saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
 				]
@@ -216,16 +200,3 @@ if (!params.skip_fastp) {
 		}
     }
 }
-
-if (!params.skip_multiqc) {
-	process {
-		withName: 'MULTIQC' {
-			publishDir = [
-				path: { "${params.outdir}/multiqc" },
-				mode: params.publish_dir_mode,
-				pattern: "*multiqc*"
-			]
-		}
-	}
-}
-
