allow custom primers input

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,10 +20,13 @@ params {
     primer_bed_RSVA = "${projectDir}/ref/RSVA_V1/RSVA.primer.bed"
     ref_gff_RSVA = "${projectDir}/ref/RSVA_V1/RSVA_amplicon_ref.gff"
     bowtie2_index_RSVA = "${projectDir}/ref/RSVA_V1/bt2_RSVA/"
+	RSVA_F_coord = "5682-7406"
 	ref_RSVB = "${projectDir}/ref/RSVB_V1/RSVB.fasta"
     primer_bed_RSVB = "${projectDir}/ref/RSVB_V1/RSVB.primer.bed"
     ref_gff_RSVB = "${projectDir}/ref/RSVB_V1/RSVB_amplicon_ref.gff"
     bowtie2_index_RSVB = "${projectDir}/ref/RSVB_V1/bt2_RSVB/"
+	RSVB_F_coord = "5717-7441"
+	RSV_F_length = 1725
 
     // MultiQC options
     multiqc_config = null
