add option to skip the ivar trim primer clipping step

--- a/nextflow.config
+++ b/nextflow.config
@@ -62,6 +62,7 @@ params {
 
     // Alignment
     save_bowtie2_unaligned = false
+	skip_ivar_trim = false
     ivar_trim_noprimer = false
     ivar_trim_offset = null
     save_mpileup = false
