add bowtie2 index build module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,6 +20,16 @@ process {
         ]
     }
 
+	withName: '.*:PREPARE_GENOME:BOWTIE2_BUILD' {
+		ext.args = '--seed 1'
+		publishDir = [
+			path: { "${params.output}/genome" },
+			mode: params.publish_dir_mode,
+			saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+			enabled: params.save_bowtie2_index
+		]
+	}
+
     withName: '.*:SELECT_REFERENCE:BBMAP_ALIGN' {
 		ext.args = "local=true maxindel=80"
         publishDir = [
