--- a/nextflow.config
+++ b/nextflow.config
@@ -12,22 +12,18 @@ params {
     input = null
 
     // References
-    genome = null
-    igenomes_base = 's3://ngi-igenomes/igenomes'
-    igenomes_ignore = false
     fasta = "${projectDir}/ref/RSV_A_B_ampseq_refs.fasta"
 	ref_RSVA = "${projectDir}/ref/RSVA_V1/RSVA.fasta"
     primer_bed_RSVA = "${projectDir}/ref/RSVA_V1/RSVA.primer.bed"
     ref_gff_RSVA = "${projectDir}/ref/RSVA_V1/RSVA_amplicon_ref.gff"
-    bowtie2_index_RSVA = "${projectDir}/ref/RSVA_V1/bt2_RSVA/"
 	RSVA_F_coord = "5682-7406"
 	RSVA_F_length = 1725
 	ref_RSVB = "${projectDir}/ref/RSVB_V1/RSVB.fasta"
     primer_bed_RSVB = "${projectDir}/ref/RSVB_V1/RSVB.primer.bed"
     ref_gff_RSVB = "${projectDir}/ref/RSVB_V1/RSVB_amplicon_ref.gff"
-    bowtie2_index_RSVB = "${projectDir}/ref/RSVB_V1/bt2_RSVB/"
 	RSVB_F_coord = "5717-7441"
 	RSVB_F_length = 1725
+	save_bowtie2_index = false
 
     // MultiQC options
     multiqc_config = null
@@ -125,7 +121,6 @@ profiles {
     }
     docker {
         docker.enabled         = true
-        docker.userEmulation   = true
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
@@ -168,15 +163,6 @@ profiles {
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
 }
-
-
-// Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
-}
-
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
