concat RSVA and RSVB references; remove --fasta parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,6 @@ params {
     input = null
 
     // References
-    fasta = "${projectDir}/ref/RSV_A_B_ampseq_refs.fasta"
 	ref_RSVA = "${projectDir}/ref/RSVA_V1/RSVA.fasta"
     primer_bed_RSVA = "${projectDir}/ref/RSVA_V1/RSVA.primer.bed"
     ref_gff_RSVA = "${projectDir}/ref/RSVA_V1/RSVA_amplicon_ref.gff"
@@ -23,7 +22,7 @@ params {
     ref_gff_RSVB = "${projectDir}/ref/RSVB_V1/RSVB_amplicon_ref.gff"
 	RSVB_F_coord = "5717-7441"
 	RSVB_F_length = 1725
-	save_bowtie2_index = false
+	save_genome = false
 
     // MultiQC options
     multiqc_config = null
