--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,13 +20,22 @@ process {
         ]
     }
 
+	withName: '.*:PREPARE_GENOME:PREP_REF' {
+		publishDir = [
+			path: { "${params.output}/genome" },
+			mode: params.publish_dir_mode,
+			saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+			enabled: params.save_genome
+		]
+	}
+
 	withName: '.*:PREPARE_GENOME:BOWTIE2_BUILD' {
 		ext.args = '--seed 1'
 		publishDir = [
 			path: { "${params.output}/genome" },
 			mode: params.publish_dir_mode,
 			saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-			enabled: params.save_bowtie2_index
+			enabled: params.save_genome
 		]
 	}
 
