add minimum trim reads and minimum mapped reads for downstream processes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -160,11 +160,19 @@ process {
     }
 
 	withName: SUMMARY {
-		publishDir =[
+		publishDir = [
 			path: { "${params.output}/summary" },
 			mode: params.publish_dir_mode,
 			pattern: "*.summary.tsv"
 		]
+	}
+
+	withName: SUMMARY_CLEANUP {
+			publishDir = [
+				path: { "${params.output}" },
+				mode: 'copy',
+				pattern: "run_summary.tsv"
+			]
 	}
 }
 
