--- a/nextflow.config
+++ b/nextflow.config
@@ -34,7 +34,6 @@ params {
 
     // Boilerplate options
     output = null
-	run_name = 'run'
     tracedir = "${params.output}/pipeline_info"
     publish_dir_mode = 'copy'
     email = null
@@ -55,9 +54,11 @@ params {
     trim_len = 50
     skip_fastp = false
     skip_fastqc = false
+	min_trim_reads = 0
 
     // Alignment
     save_bowtie2_unaligned = false
+	min_mapped_reads = 1000
 	skip_ivar_trim = false
     ivar_trim_noprimer = false
     ivar_trim_offset = null
